[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["Jakub Fijałkowski <kuba@codinginfinity.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
lazy_static = "1.4.0"
reqwest = { version = "0.10.9", features = ["blocking", "json"] }
serde = { version = "1.0.118", features = ["derive"] }
thiserror = "1.0.22"
